Closed Bug 14045 Opened 25 years ago Closed 25 years ago

[DOGFOOD, REGRESSION] Quoting for for imap and pop not working today...

Categories

(MailNews Core :: Composition, defect, P1)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: sfraser_bugs)

References

Details

This appears to be an editor problem. Note: this is different from Bug #13891
which just effected replying to local mail and which Jean-Francois already
fixed.

If you try to reply to a message in todays build, the editor instance never
shows the message body.

I've traced it through and our code is assembling the message in a temp file and
handing a file url off to the editor instance telling it to load this url in the
editor instance.

But editor never ends up loading the file.


Jean-Francois, I'm pretty sure this is a editor and/or netwerk bug (from
warren's changes yesterday??). Whose are main contact over there for re-assiging
this bug?
I was just looking at this problem. What appends is that we (msgCompose) tell
ender to load a local url (temp/nscomp.html). Then we receive the callback
(NotifyDocumentCreated) from ender telling us that the document has been
created. At this point we delete the temp file but I get later the folowing
error on the output window:
Error: Can't load: file:///C|/TEMP/nscomp.html (8000ffff)

I don't know why ender tell us it's done when it isn't!
Assignee: ducarroz → buster
Summary: [DOGFOOD] Quoting for for imap and pop not working today... → [DOGFOOD, REGRESSION] Quoting for for imap and pop not working today...
Target Milestone: M11
I reassign this bug to buster.
Severity: normal → blocker
Priority: P3 → P1
Cc'ing warren.  He checked in something that somehow delayed message loading in
the editor to some time later than when we get the OnEndDocumentLoad
notification.  This is causing other problems (e.g. asserts on startup) and I
wonder if it also might be the root of this bug as well?
*** Bug 14073 has been marked as a duplicate of this bug. ***
When you think you have this fixed, pleaes test 14073 as well, which I think is
a duplicate.
Assignee: buster → sfraser
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I checked in a change to nsEditorShell which should fix this. The old double-
reload with charset bug was back. We now handle this by checking the status value
on the first OnEndDocumentLoad call, which is NS_BINDING_ABORTED. For this
call, we don't try to create the editor.
Fixed.
I pulled Simon's fix and quoting does indeed work again! Thanks simon.
Blocks: 11091
QA Contact: lchiang → pmock
changing QA assigned to pmock@netscape.com
Status: RESOLVED → VERIFIED
Verified on IMAP for win32, macos, and linux using the following builds:
ftp://sweetlou/products/client/seamonkey/windows/32bit/x86/1999-11-12-18-M11/bac
kup/install.exe
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-11-11-11-M11/netscap
e5-mac-M11.sea.bin
ftp://sweetlou/products/client/seamonkey/unix/linux_glibc/2.2/x86/1999-11-12-18-
M11/netscape-i686-pc-linux-gnu.tar.gz


I verified quoting is working on POP and IMAP using rich text editor.  Plain
text quoting is not working in these build.  There is a separate bug on this
issue bug 13574.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.