Fix the double reload problem in the editor, which fixes bug 14045 and maybe others.